exports[`InputGroupItemWidget should render correctly 1`] = `
<mockConstructor
  className="label-class">
  <mockConstructor
    checked={true}
    onChange={[Function]}
    type="checkbox"
    value="2" />
   
  Label
</mockConstructor>
`;

exports[`InputGroupItemWidget should validate prop types 1`] = `
"Warning: Failed prop type: Invalid prop \`label\` of type \`number\` supplied to \`InputMultichoiceGroupItem\`, expected \`object\`.
    in InputMultichoiceGroupItem"
`;

exports[`InputGroupItemWidget should validate prop types 2`] = `
"Warning: Failed prop type: Invalid prop \`value\` of type \`number\` supplied to \`InputMultichoiceGroupItem\`, expected \`string\`.
    in InputMultichoiceGroupItem"
`;
